--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
-    "@next/font": "^14.2.14",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@supabase/ssr": "^0.5.1",
     "@vestaboard/vbml": "^1.2.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "googleapis": "^105.0.0",
+    "googleapis": "^144.0.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "supabase": "^1.204.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
