--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@supabase/ssr": "^0.5.1",
     "@vestaboard/vbml": "^1.2.6",
     "class-variance-authority": "^0.7.0",
@@ -23,6 +26,7 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "supabase": "^1.204.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
