--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,11 @@
       "path": "/api/cron",
       "schedule": "*/5 * * * *"
     }
-  ]
+  ],
+  "functions": {
+    "api/*.js": {
+      "memory": 3009,
+      "maxDuration": 30
+    }
+  }
 }
